--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,29 @@
 @import url("https://use.typekit.net/hvq7vja.css");
 
+$hoverColour: #2626C4;
+$skills: #365FFF;
+$background: #E0ECFF;
+$primary: #3617ce;
+$secondary: #365FFF;
+$nextBackground: #E0ECFF;
+$darkBackground: #191163;
+
 *{
 	margin: 0; 
 	padding: 0;
 }
 
+body.dark{
+	background: $background;
+}
+
+
 a{
 	text-decoration: none;
-	color: black;
+	color: $secondary;
+	&:hover{
+		color: $hoverColour;
+	}
 }
 
 .italic{
@@ -20,7 +36,7 @@ menu{
 	.buttons{
 		position: absolute; 
 		left: 100vw;
-		background: #eee;
+		background: $darkBackground;
 		width: 100vw; 
 		height: 100vh;
 		transition: left 1s;
@@ -32,11 +48,6 @@ menu{
 			a{
 				margin: 0 auto 30px auto;
 				display: block;
-				&:hover{
-					color: black;
-					font-style: italic;
-					letter-spacing: 0.7px;
-				}
 			}
 			width: 100%;
 		}
@@ -51,23 +62,23 @@ menu{
 	}
 }
 
+#headerCanvas{
+	display: none;
+}
+
 section#header{
 	margin: auto;
 	padding: 200px 0;
-	// height: 60vh; 
-	// max-height: 800px;
-	background-image: url(../images/_dots.jpg);
-	background-repeat: repeat;
-	background-size: 150px auto;
 	.introHeader{
 		font-family: "alverata", serif;
 		text-align: center;
 		position: relative;
+		color: $secondary;
 		margin: auto;
 		top: 40%;
 		width: 80%;
 		font-size: 4.5vw;
-		max-width: 600px;
+		// max-width: 600px;
 		a{
 			font-style: italic;
 		}
@@ -75,30 +86,24 @@ section#header{
 }
 
 p{
-	font-family: "source-sans-pro", sans-serif;
+	font-family: "source-sans-pro", "helvetica", sans-serif;
 	font-weight: 300; 
-	font-size: 22px;
+	font-size: 20px;
 	margin-bottom: 20px;
-	a{
-		font-style: italic;
-		&:hover{
-			text-decoration: underline;
-		}
-	}
 }
 
 p.blockquote{
-	border-left: 2px solid black;
+	border-left: 2px solid $secondary;
 	padding-left: 30px;
 }
 
 blockquote{
-	font-family: "source-sans-pro", sans-serif;
+	font-family: "source-sans-pro", "helvetica", sans-serif;
 	font-weight: 300; 
 	margin: 100px auto;
 	font-size: 22px;
 	margin-bottom: 20px;
-	border-left: 2px solid black;
+	border-left: 2px solid $secondary;
 	padding-left: 30px;
 }
 
@@ -106,7 +111,8 @@ h3.sectionTitle{
 	font-size: 20px;
 	width: 100%; 
 	padding: 10px 0 40px 0;
-	border-top: 3px dotted black;
+	color: $secondary;
+	border-top: 3px dotted $secondary;
 }
 h3.title{
 	margin-top: 8px;
@@ -117,17 +123,29 @@ h3.title{
 }
 h3.skills{
 	font-size: 20px;
-	font-family: "source-sans-pro", sans-serif;
-	color: #62656f;
-	margin-top: 8px;
+	font-family: "source-sans-pro", "helvetica", sans-serif;
+	color: $skills;
+	margin-top: 5px;
 	font-weight: 300; 
-	// font-style: italic;
+}
+
+@keyframes slide-work {
+    from {
+		top: 150px;
+		opacity: 0; 
+    }
+    to {
+		top: 0px; 
+		opacity: 1;
+    }
 }
 section#work{
+	animation: slide-work 1500ms forwards;
 	margin: auto;
+	position: relative;
+	top: 0px; 
 	width: 100%;
 	#selectedWork{
-		padding-top: 100px;
 		overflow:hidden;
 		margin: 0 auto 100px auto;
 		width: 80%;
@@ -135,11 +153,22 @@ section#work{
 			margin-bottom: 100px;
 			width: 100%;
 			a{
+				&:hover{
+					h2.selectedHeader,
+					h3.selectedTitle,
+					h3.skills{
+						color: $hoverColour;
+					}
+					img{
+						outline: solid 10px $hoverColour;
+					    outline-offset: -10px;
+					}
+				}
 				h2.selectedHeader{
 					font-family: "alverata", serif;
 					font-weight: 600;
 					font-size: 4.5vw;
-					max-width: 600px;
+					// max-width: 600px;
 					margin-top: 5px;
 					
 				}
@@ -150,19 +179,23 @@ section#work{
 					font-weight: 300;
 				}
 				img{
+				    background: $nextBackground;
 					width: 100%;
+					outline-offset: 0px;
+					transition: all 300ms;
 				}
 				&#viewMore{
 					h3{
 						padding: 50px 0 50px 0;
-						border: 3px dotted black;
+						border: 3px dotted $secondary;
 						box-sizing: border-box;
 					    -moz-box-sizing: border-box;
 					    -webkit-box-sizing: border-box;
 						width: 100%;
 						text-align: center;
 						&:hover{
-							background: #eee;
+							border: 3px dotted $hoverColour;
+							background: rgba(0,51,255,0.1);
 						}
 					}
 				}
@@ -171,7 +204,7 @@ section#work{
 		}
 
 	}
-	#moreWork{
+	.moreWork{
 		float: bottom;
 		display: flex;
 		flex-direction: row; 
@@ -184,9 +217,9 @@ section#work{
 			width: 100%;
 			margin-bottom: 80px;
 			a{
-				color: black;
+				color: $secondary;
 				h3.title{
-					font-weight: 500;
+					font-weight: 400;
 				}
 				h2.selectedHeader{
 					font-family: "alverata", serif;
@@ -202,15 +235,45 @@ section#work{
 					font-size: 17px;
 					font-weight: 300;
 				}
+				&:hover{
+					h2.selectedHeader{
+						text-decoration: underline;
+					}
+					h3.title,
+					h2.selectedHeader,
+					h3.selectedTitle,
+					h3.skills{
+						color: $hoverColour;
+					}
+					img{
+						// outline: solid 10px $hoverColour;
+					 //    outline-offset: -10px;
+					}
+				}
 			}
 			img{
 				width: 100%;
+				outline-offset: 0px;
+				transition: all 300ms;
+				
 			}
 		}
 	}
 }
 
+@keyframes slide-project {
+    from {
+		top: 300px;
+		opacity: 0; 
+    }
+    to {
+		top: 150px; 
+		opacity: 1;
+    }
+}
 section#fullProject{
+	animation: slide-project 1500ms forwards;
+	-webkit-animation: slide-project 1500ms forwards;
 	position: relative;
 	width: 80%;
 	max-width: 1074px;
@@ -235,6 +298,7 @@ section#fullProject{
 		margin: auto;
 		width: 100%; 
 		max-width: 1074px;
+		color: $secondary;
 	}
 	p{	
 		margin: 0 auto 20px auto;
@@ -252,10 +316,11 @@ section#fullProject{
 	div.img-group{
 		position: relative;
 		margin-top: 150px;
-		margin-bottom: 50px;
+		margin-bottom: 70px;
 		display: block;
 		overflow: hidden;
 		video.big, img.big{
+			background: $nextBackground;
 			width: 100%; 
 			margin-top: -4px;
 		}
@@ -270,10 +335,8 @@ section#nextProject{
 	width: 100%; 
 	text-align: center;
 	margin-top: 200px;
-	padding: 50px 0 60px 0;
-	background-image: url(../images/_dots.jpg);
-	background-repeat: repeat;
-	background-size: 150px auto;
+	padding: 40px 0 70px 0;
+	background: $nextBackground;
 	.header{
 		width: 80%;
 		max-width: 1074px;
@@ -284,26 +347,40 @@ section#nextProject{
 				text-align: center;
 				font-family: "alverata", serif;
 				font-weight: 600;
-				// width: 66%;
 				margin: 5px auto 0 auto;
-			}
-			h3.skills{
-				color: #454b62
 			}
 			p{
 				font-size: 18px;
-				color: #454b62
 			}
 			&:hover{
 				h2.selectedHeader{
 					text-decoration: underline;
+					color: $hoverColour;
 				}
+				h2.selectedHeader,
+				h3.skills,
+				h3.title{
+					color: $hoverColour;
+				}
+
 			}
 		}
 	}
 }
 
+@keyframes slide-about {
+    from {
+		top: 100px;
+		opacity: 0; 
+    }
+    to {
+		top: 0px; 
+		opacity: 1;
+    }
+}
 section#about{
+	animation: slide-about 1000ms forwards;
+	top: 0px;
 	width: 80%;
     max-width: 1074px;
     padding: 50px 0 100px 0;
@@ -313,19 +390,17 @@ section#about{
 	div#hello{
 		align-self: flex-start;
 		width: 100%;
+		color: $secondary;
 		h2, h3{
 			&.title{
 				margin-bottom: 20px;
 			}
 			&.selectedHeader{
 				margin-bottom: 40px;
-				// line-height: 2.2vw;
 				font-size: 3.8vw;
-				// margin-top: 5px;
 					
 			}
 		}
-
 		p{
 			margin-bottom: 20px;
 		}
@@ -334,21 +409,21 @@ section#about{
 }
 
 section#footer{
-	background: #eee;
+	background: $darkBackground;
 	position: absolute;
 	width: 100%;
 	text-align: center;
 	padding: 50px 0 50px 0;
 	h3{
-		color: #62656f;
+		color: $skills;
 		font-size: 18px;
-		font-family: "source-sans-pro", sans-serif;
+		font-family: "source-sans-pro", "helvetica", sans-serif;
 		margin-top: 5px;
 		font-weight: 300; 
 		a{
-			color: #62656f;
+			color: $skills;
 			&:hover{
-				text-decoration: underline;
+				color: $hoverColour;
 			}
 		}
 	}
@@ -358,12 +433,19 @@ section#footer{
 
 // @media (min-width: 1200px) and (orientation: landscape){
 @media only screen and (min-width: 992px){
+	#headerCanvas{
+		display: block;
+		z-index: -100;
+		position: fixed;
+		top: 0px; 
+		left: 0px; 
+	}
 	menu{
 		display: block;
 		width: 94%;
 		left: 3%;
 		top: 30px;
-		border-top: 2px solid black;
+		border-top: 2px solid $secondary;
 		padding: 10px 0 0 0;
 		.buttons{
 			left: auto;
@@ -391,6 +473,7 @@ section#footer{
 		}
 	}
 	section#header{
+		padding: 200px 0 100px 0;
 		.introHeader{
 			font-size: 36px;
 			max-width: 850px;
@@ -406,12 +489,13 @@ section#footer{
 				max-width: 512px;
 				margin-bottom: 100px;
 				&:hover h2.selectedHeader{
-					color: black;
+					color: $secondary;
 					text-decoration: underline;
 				}
 				a h2.selectedHeader{
 					width: 100%;
 					font-size: 2.2vw;
+				    max-width: 600px;
 				}
 				&.left{
 					float: left;
@@ -424,7 +508,7 @@ section#footer{
 				}
 			}
 		}
-		#moreWork{
+		.moreWork{
 			padding-top: 100px;
 			width: 80%;
 			max-width: 1074px;
@@ -463,6 +547,8 @@ section#footer{
 			font-size: 3vw;
 		}
 	}
+
+
 	section#about{
 		overflow: hidden;
 		width: 80%;
@@ -470,8 +556,7 @@ section#footer{
 	    padding: 150px 0 150px 0;
 	    display: flex;
 		justify-content: center;
-		// flex-direction: column;
-	    div#hello{
+		div#hello{
 		    width: 50%; 
 		    h2, h3{
 			    &.title{
@@ -489,6 +574,7 @@ section#footer{
 	    }
 		img#self{
 			width: 38%; 
+		    margin-right: 30px;
 		}
 	}
 }
@@ -501,7 +587,7 @@ section#footer{
 				font-size: 30px;
 			}
 		}
-		#moreWork .project{
+		.moreWork .project{
 			margin-bottom: 120px;
 			a h2.selectedHeader{
 				font-size: 25px;
