--- a/css/style.scss
+++ b/css/style.scss
@@ -179,7 +179,7 @@ section#work{
 					font-weight: 300;
 				}
 				img{
-				    background: $nextBackground;
+				    // background: $nextBackground;
 					width: 100%;
 					outline-offset: 0px;
 					transition: all 300ms;
@@ -302,15 +302,12 @@ section#fullProject{
 	}
 	p{	
 		margin: 0 auto 20px auto;
-		// overflow: hidden;
 		top: 50px;
 		position: relative;
 		&.intro{
 			font-family: "alverata", serif;
 			line-height: 30px;
 			font-size: 20px;
-			// font-weight: 600;
-			// font-size: 24px;
 		}
 	}
 	div.img-group{
@@ -320,7 +317,6 @@ section#fullProject{
 		display: block;
 		overflow: hidden;
 		video.big, img.big{
-			background: $nextBackground;
 			width: 100%; 
 			margin-top: -4px;
 		}
@@ -436,7 +432,7 @@ section#footer{
 	#headerCanvas{
 		display: block;
 		z-index: -100;
-		position: fixed;
+		position: absolute;
 		top: 0px; 
 		left: 0px; 
 	}
@@ -473,14 +469,16 @@ section#footer{
 		}
 	}
 	section#header{
-		padding: 200px 0 100px 0;
+		padding: 0px 0 0px 0;
+		height: 60vh;
+		vertical-align: center;
 		.introHeader{
 			font-size: 36px;
 			max-width: 850px;
 		}
 	}
 	section#work{
-		margin: 100px auto 100px auto;
+		margin: 0px auto 100px auto;
 		#selectedWork{
 			width: 80%;
 			max-width: 1074px;
